# rocketbot

./: .gitignore  Cargo.toml
rocketbot/: Cargo.toml
rocketbot/src/: commands.rs  config.rs  errors.rs  jsonage.rs  main.rs  plugins.rs  rate_limiting.rs  socketry.rs  string_utils.rs
rocketbot_bim_common/: Cargo.toml  build.rs
rocketbot_bim_common/src/: lib.rs  ride_table.rs
rocketbot_bim_common/src/achievements/: mod.rs
rocketbot_geocoding/: Cargo.toml
rocketbot_geocoding/examples/: countrycodes.rs
rocketbot_geocoding/src/: confusion.rs  country_codes.rs  lib.rs  s11n.rs
rocketbot_geocoding/src/providers/: geonames.rs  mod.rs  nominatim.rs
rocketbot_geonames/: Cargo.toml  country_codes.sparql
rocketbot_geonames/examples/: countrycodes.rs
rocketbot_geonames/src/: confusion.rs  lib.rs
rocketbot_interface/: Cargo.toml
rocketbot_interface/src/: clown.rs  commands.rs  errors.rs  interfaces.rs  lib.rs  macros.rs  message.rs  model.rs  serde.rs  sync.rs
rocketbot_makepdf/: Cargo.toml
rocketbot_makepdf/examples/: binarify.rs  makepdf.rs
rocketbot_makepdf/src/: lib.rs  model.rs
rocketbot_plugin_allograph/: Cargo.toml
rocketbot_plugin_allograph/help/: allocool.md
rocketbot_plugin_allograph/src/: lib.rs
rocketbot_plugin_aviate/: Cargo.toml  note.txt
rocketbot_plugin_aviate/db/: schema.sql
rocketbot_plugin_aviate/examples/: aviate_load_arm.rs
rocketbot_plugin_aviate/help/: fly.md  flyfrom.md  flyto.md
rocketbot_plugin_aviate/src/: lib.rs
rocketbot_plugin_barcode/: Cargo.toml
rocketbot_plugin_barcode/help/: datamatrix.md  ean13.md  vaxcert.md
rocketbot_plugin_barcode/src/: datamatrix.rs  ean13.rs  lib.rs  vaxcert.rs
rocketbot_plugin_bim/: Cargo.toml
rocketbot_plugin_bim/db/: achievements.pgsql  odd_stats.pgsql  schema.pgsql
rocketbot_plugin_bim/db/migrations/: r0003_to_r0004.pgsql  r0004_to_r0005.pgsql  r0005_to_r0006.pgsql  r0006_to_r0007.pgsql  r0007_to_r0008.pgsql  r0008_to_r0009.pgsql  r0009_to_r0010.pgsql  r0010_to_r0011.pgsql  r0011_to_r0012.pgsql  r0012_to_r0013.pgsql  r0013_to_r0014.pgsql  r0014_to_r0015.pgsql  r0015_to_r0016.pgsql  r0016_to_r0017.pgsql  r0017_to_r0018.pgsql  r0018_to_r0019.pgsql
rocketbot_plugin_bim/db/tests/: test_natural_compare.pgsql
rocketbot_plugin_bim/examples/: atom_bimdb_vigilance.rs  last_bim_rider_png_anim.rs  obtain_bim_bph.rs  obtain_bim_ipt.rs  obtain_bim_ratb.rs  obtain_bim_sa.rs  obtain_bim_sl.rs  obtain_bim_sl_db.py  test_draw_table.rs  vehicle_db_tool.rs
rocketbot_plugin_bim/help/: bim.md  bimcompanies.md  bimcompany.md  bimcost.md  bimdivscore.md  bimfixedmonopolies.md  bimfreshen.md  bimop.md  bimranges.md  bimride.md  bimriderlines.md  bimridertypes.md  bimtypes.md  favbims.md  fixbimride.md  lastbimriderbalance.md  lastbims.md  lonebims.md  missingbimlines.md  recentbimrides.md  refreshbimach.md  topbimdays.md  topbimlines.md  topbims.md  toplastbims.md  topriders.md  widestbims.md
rocketbot_plugin_bim/src/: achievements.rs  date_time.rs  lib.rs  range_set.rs  serde.rs  short_last_rider_status.rs  table_draw.rs  top.rs
rocketbot_plugin_bim/wikiparseserver/: client.py  composer.json  wikiparseserver.php
rocketbot_plugin_bim_react/: Cargo.toml
rocketbot_plugin_bim_react/src/: lib.rs
rocketbot_plugin_calc/: Cargo.toml
rocketbot_plugin_calc/data/: unitdb.toml
rocketbot_plugin_calc/help/: calc.md  calcconst.md  calcfunc.md  calcunit.md  factor.md  redfrac.md
rocketbot_plugin_calc/src/: ast.rs  calc_lang.pest  currency.rs  factor.rs  grimoire.rs  known_primes.rs  lib.rs  numbers.rs  parsing.rs  units.rs
rocketbot_plugin_catchword/: Cargo.toml
rocketbot_plugin_catchword/help/: catchment.md
rocketbot_plugin_catchword/src/: lib.rs
rocketbot_plugin_config_user_alias/: Cargo.toml
rocketbot_plugin_config_user_alias/src/: lib.rs
rocketbot_plugin_date/: Cargo.toml
rocketbot_plugin_date/help/: days.md  dejulian.md  easter.md  julian.md  weekday.md
rocketbot_plugin_date/src/: lib.rs
rocketbot_plugin_degrees/: Cargo.toml
rocketbot_plugin_degrees/src/: lib.rs  slice_image.rs
rocketbot_plugin_deobfuscate/: Cargo.toml
rocketbot_plugin_deobfuscate/src/: decoders.rs  lib.rs
rocketbot_plugin_dice/: Cargo.toml
rocketbot_plugin_dice/help/: decide.md  pickglue.md  randwordle.md  roll.md  shuffle.md  someyear.md  yn.md
rocketbot_plugin_dice/src/: lib.rs
rocketbot_plugin_elementary/: Cargo.toml
rocketbot_plugin_elementary/examples/: obtain_elements.rs
rocketbot_plugin_elementary/help/: elements.md
rocketbot_plugin_elementary/src/: lib.rs
rocketbot_plugin_exiftell/: Cargo.toml
rocketbot_plugin_exiftell/src/: lib.rs
rocketbot_plugin_fact/: Cargo.toml
rocketbot_plugin_fact/help/: fact.md
rocketbot_plugin_fact/src/: interface.rs  lib.rs
rocketbot_plugin_grammargen/: Cargo.toml
rocketbot_plugin_grammargen/examples/: grammargenerate.rs
rocketbot_plugin_grammargen/grammars/: denckring.grammar  eqn.grammar  javaclass.grammar  pomo.grammar  slashfic.grammar  sprichwort.toml  sprichwort.tsv  toiletpaper.grammar  wtf3.grammar
rocketbot_plugin_grammargen/help/: grammargen.md
rocketbot_plugin_grammargen/src/: grammar.rs  grammar_gen_lang.pest  lib.rs  parsing.rs
rocketbot_plugin_hackernews/: Cargo.toml
rocketbot_plugin_hackernews/src/: lib.rs
rocketbot_plugin_linguistics/: Cargo.toml
rocketbot_plugin_linguistics/db/: schema.sql
rocketbot_plugin_linguistics/examples/: wikt_cirrus_to_gg.rs
rocketbot_plugin_linguistics/help/: gg.md
rocketbot_plugin_linguistics/src/: lib.rs
rocketbot_plugin_link_react/: Cargo.toml
rocketbot_plugin_link_react/src/: lib.rs
rocketbot_plugin_logger/: Cargo.toml
rocketbot_plugin_logger/db/: schema.pgsql
rocketbot_plugin_logger/src/: lib.rs
rocketbot_plugin_netdev/: Cargo.toml
rocketbot_plugin_netdev/help/: dose.md  port.md
rocketbot_plugin_netdev/src/: lib.rs
rocketbot_plugin_nines/: Cargo.toml
rocketbot_plugin_nines/help/: nines.md
rocketbot_plugin_nines/src/: lib.rs
rocketbot_plugin_progress/: Cargo.toml
rocketbot_plugin_progress/help/: progress.md
rocketbot_plugin_progress/src/: lib.rs
(+331 files in other folders)
