[workspace]
members = [
    "rocketbot",
    "rocketbot_geonames",
    "rocketbot_interface",
    "rocketbot_plugin_allograph",
    "rocketbot_plugin_belch",
    "rocketbot_plugin_calc",
    "rocketbot_plugin_catchword",
    "rocketbot_plugin_config_user_alias",
    "rocketbot_plugin_dice",
    "rocketbot_plugin_fortune",
    "rocketbot_plugin_grammargen",
    "rocketbot_plugin_quotes",
    "rocketbot_plugin_sed",
    "rocketbot_plugin_text_commands",
    "rocketbot_plugin_thanks",
    "rocketbot_plugin_vaccine",
    "rocketbot_plugin_version",
    "rocketbot_plugin_weather",
    "rocketbot_regex_replace",
]
