[workspace]
members = [
    "rocketbot",
    "rocketbot_barcode",
    "rocketbot_geocoding",
    "rocketbot_interface",
    "rocketbot_makepdf",
    "rocketbot_plugin_allograph",
    "rocketbot_plugin_barcode",
    "rocketbot_plugin_belch",
    "rocketbot_plugin_bim",
    "rocketbot_plugin_calc",
    "rocketbot_plugin_catchword",
    "rocketbot_plugin_config_user_alias",
    "rocketbot_plugin_date",
    "rocketbot_plugin_dice",
    "rocketbot_plugin_exiftell",
    "rocketbot_plugin_fact",
    "rocketbot_plugin_fortune",
    "rocketbot_plugin_grammargen",
    "rocketbot_plugin_group_pressure",
    "rocketbot_plugin_help",
    "rocketbot_plugin_link_react",
    "rocketbot_plugin_logger",
    "rocketbot_plugin_new_year",
    "rocketbot_plugin_nines",
    "rocketbot_plugin_numberword",
    "rocketbot_plugin_paper",
    "rocketbot_plugin_picrespond",
    "rocketbot_plugin_progress",
    "rocketbot_plugin_quotes",
    "rocketbot_plugin_randreact",
    "rocketbot_plugin_roman_num",
    "rocketbot_plugin_sed",
    "rocketbot_plugin_serious_mode",
    "rocketbot_plugin_simultype",
    "rocketbot_plugin_sockpuppet",
    "rocketbot_plugin_text_commands",
    "rocketbot_plugin_thanks",
    "rocketbot_plugin_topic_timer",
    "rocketbot_plugin_vaccine",
    "rocketbot_plugin_version",
    "rocketbot_plugin_vitals",
    "rocketbot_plugin_weather",
    "rocketbot_regex_replace",
    "rocketbotweb",
]
