[package]
name = "rocketbot"
version = "0.1.0"
edition = "2018"
default-run = "rocketbot"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
env_logger = { version = "0.9" }
flate2 = { version = "1.0" }
futures-util = { version = "0.3" }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
log = { version = "0.4" }
once_cell = { version = "1.10" }
rand = { version = "0.8" }
rocketbot_interface = { path = "../rocketbot_interface" }
rocketbot_plugin_allograph = { path = "../rocketbot_plugin_allograph" }
rocketbot_plugin_barcode = { path = "../rocketbot_plugin_barcode" }
rocketbot_plugin_belch = { path = "../rocketbot_plugin_belch" }
rocketbot_plugin_bim = { path = "../rocketbot_plugin_bim" }
rocketbot_plugin_calc = { path = "../rocketbot_plugin_calc" }
rocketbot_plugin_catchword = { path = "../rocketbot_plugin_catchword" }
rocketbot_plugin_config_user_alias = { path = "../rocketbot_plugin_config_user_alias" }
rocketbot_plugin_date = { path = "../rocketbot_plugin_date" }
rocketbot_plugin_deobfuscate = { path = "../rocketbot_plugin_deobfuscate" }
rocketbot_plugin_dice = { path = "../rocketbot_plugin_dice" }
rocketbot_plugin_exiftell = { path = "../rocketbot_plugin_exiftell" }
rocketbot_plugin_fact = { path = "../rocketbot_plugin_fact" }
rocketbot_plugin_fortune = { path = "../rocketbot_plugin_fortune" }
rocketbot_plugin_grammargen = { path = "../rocketbot_plugin_grammargen" }
rocketbot_plugin_group_pressure = { path = "../rocketbot_plugin_group_pressure" }
rocketbot_plugin_help = { path = "../rocketbot_plugin_help" }
rocketbot_plugin_link_react = { path = "../rocketbot_plugin_link_react" }
rocketbot_plugin_logger = { path = "../rocketbot_plugin_logger" }
rocketbot_plugin_new_year = { path = "../rocketbot_plugin_new_year" }
rocketbot_plugin_nines = { path = "../rocketbot_plugin_nines" }
rocketbot_plugin_numberword = { path = "../rocketbot_plugin_numberword" }
rocketbot_plugin_paper = { path = "../rocketbot_plugin_paper" }
rocketbot_plugin_picrespond = { path = "../rocketbot_plugin_picrespond" }
rocketbot_plugin_progress = { path = "../rocketbot_plugin_progress" }
rocketbot_plugin_quotes = { path = "../rocketbot_plugin_quotes" }
rocketbot_plugin_randreact = { path = "../rocketbot_plugin_randreact" }
rocketbot_plugin_roman_num = { path = "../rocketbot_plugin_roman_num" }
rocketbot_plugin_sed = { path = "../rocketbot_plugin_sed" }
rocketbot_plugin_serious_mode = { path = "../rocketbot_plugin_serious_mode" }
rocketbot_plugin_simultype = { path = "../rocketbot_plugin_simultype" }
rocketbot_plugin_slogan = { path = "../rocketbot_plugin_slogan" }
rocketbot_plugin_sockpuppet = { path = "../rocketbot_plugin_sockpuppet" }
rocketbot_plugin_syllable = { path = "../rocketbot_plugin_syllable" }
rocketbot_plugin_text = { path = "../rocketbot_plugin_text" }
rocketbot_plugin_text_commands = { path = "../rocketbot_plugin_text_commands" }
rocketbot_plugin_topic_timer = { path = "../rocketbot_plugin_topic_timer" }
rocketbot_plugin_thanks = { path = "../rocketbot_plugin_thanks" }
rocketbot_plugin_time = { path = "../rocketbot_plugin_time" }
rocketbot_plugin_transliterate = { path = "../rocketbot_plugin_transliterate" }
rocketbot_plugin_user_list_message = { path = "../rocketbot_plugin_user_list_message" }
rocketbot_plugin_vaccine = { path = "../rocketbot_plugin_vaccine" }
rocketbot_plugin_version = { path = "../rocketbot_plugin_version" }
rocketbot_plugin_vitals = { path = "../rocketbot_plugin_vitals" }
rocketbot_plugin_weather = { path = "../rocketbot_plugin_weather" }
rocketbot_plugin_wienerlinien = { path = "../rocketbot_plugin_wienerlinien" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tokio = { version = "1.17", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
url = { version = "2.2" }
