[package]
name = "rocketbot_bim_common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
indexmap = { version = "2.0", features = ["serde"] }
rocketbot_date_time = { path = "../rocketbot_date_time" }
rocketbot_string = { path = "../rocketbot_string" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13" }

[build-dependencies]
regex = { version = "1.9" }
