[package]
name = "rocketbot_geonames"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = { version = "1.0" }
chrono = { version = "0.4" }
json = { version = "0.12" }
once_cell = { version = "1.8" }
regex = { version = "1.5" }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.7", features = ["sync"] }
url = { version = "2.2 "}
