[package]
name = "rocketbot_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bitflags = { version = "2.4" }
chrono = { version = "0.4" }
hyper = { version = "1.3" }
hyper-util = { version = "0.1", features = ["http1", "http2"] }
log = { version = "0.4" }
once_cell = { version = "1.18" }
regex = { version = "1.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.37", features = ["macros", "rt", "sync", "time"] }
