[package]
name = "rocketbot_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bitflags = { version = "2.9" }
chrono = { version = "0.4" }
hyper = { version = "1.6" }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
once_cell = { version = "1.21" }
regex = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.47", features = ["macros", "rt", "sync", "time"] }
tracing = { version = "0.1" }
