[package]
name = "rocketbot_makepdf"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21" }
flate2 = { version = "1.0" }
printpdf = { version = "0.5", features = ["embedded_images"] }
rustybuzz = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
