[package]
name = "rocketbot_makepdf"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22" }
flate2 = { version = "1.1" }
printpdf = { version = "0.8", features = ["jpeg", "png"] }
rustybuzz = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
