[package]
name = "rocketbot_plugin_barcode"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
datamatrix = { version = "0.2" }
log = { version = "0.4" }
png = { version = "0.17" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
