[package]
name = "rocketbot_plugin_barcode"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
base45 = { version = "3.0" }
chrono = { version = "0.4" }
datamatrix = { version = "0.2" }
flate2 = { version = "1.0" }
log = { version = "0.4" }
minicbor = { version = "0.11", features = ["std"] }
png = { version = "0.17" }
qrcode = { version = "0.12", default-features = false }
rand = { version = "0.8" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
unicode-normalization = { version = "0.1" }
