[package]
name = "rocketbot_plugin_barcode"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
base45 = { version = "3.0" }
chrono = { version = "0.4" }
flate2 = { version = "1.0" }
minicbor = { version = "0.24", features = ["std"] }
rand = { version = "0.8" }
rocketbot_barcode = { path = "../rocketbot_barcode" }
rocketbot_interface = { path = "../rocketbot_interface" }
rocketbot_makepdf = { path = "../rocketbot_makepdf" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
unicode-normalization = { version = "0.1" }
