[package]
name = "rocketbot_plugin_bim"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { version = "0.2" }
log = { version = "0.4" }
once_cell = { version = "1.10" }
png = { version = "0.17" }
rand = { version = "0.8" }
regex = { version = "1.5" }
rocketbot_bim_common = { path = "../rocketbot_bim_common" }
rocketbot_interface = { path = "../rocketbot_interface" }
rocketbot_render_text = { path = "../rocketbot_render_text", features = ["png"] }
rocketbot_string = { path = "../rocketbot_string", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.17", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
form_urlencoded = { version = "1.0" }
indexmap = { version = "1.8", features = ["serde-1"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
rocketbot_mediawiki_parsing = { path = "../rocketbot_mediawiki_parsing" }
scraper = { version = "0.14" }
sxd-document = { version = "0.3" }
sxd-xpath = { version = "0.4" }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
zip = { version = "0.6" }
