[package]
name = "rocketbot_plugin_bim"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bigdecimal = { version = "0.4" }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { version = "0.2" }
once_cell = { version = "1.21" }
png = { version = "0.17" }
rand = { version = "0.8" }
regex = { version = "1.11" }
rocketbot_bim_common = { path = "../rocketbot_bim_common" }
rocketbot_interface = { path = "../rocketbot_interface" }
rocketbot_primes = { path = "../rocketbot_primes" }
rocketbot_render_text = { path = "../rocketbot_render_text", features = ["png"] }
rocketbot_string = { path = "../rocketbot_string", features = ["regex", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.47", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = { version = "0.1" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.2" }
form_urlencoded = { version = "1.2" }
futures-util = { version = "0.3" }
indexmap = { version = "2.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rhai = { version = "1.22", features = ["serde"] }
rocketbot_mediawiki_parsing = { path = "../rocketbot_mediawiki_parsing" }
scraper = { version = "0.23" }
sxd-document = { version = "0.3" }
sxd-xpath = { version = "0.4" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5" }
zip = { version = "4.3" }
