[package]
name = "rocketbot_plugin_bim_react"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
http-body-util = { version = "0.1" }
hyper = { version = "1.3" }
png = { version = "0.17" }
regex = { version = "1.9" }
rocketbot_bim_common = { path = "../rocketbot_bim_common" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
