[package]
name = "rocketbot_plugin_catchword"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
log = { version = "0.4" }
rand = { version = "0.8" }
regex = { version = "1.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
rocketbot_regex_replace = { path = "../rocketbot_regex_replace" }
serde_json = { version = "1.0" }
