[package]
name = "rocketbot_plugin_date"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
julian = { version = "0.7", default-features = false }
once_cell = { version = "1.18" }
regex = { version = "1.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
