[package]
name = "rocketbot_plugin_dice"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
num-bigint = { version = "0.4" }
once_cell = { version = "1.8" }
rand = { version = "0.8" }
regex = { version = "1.5" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tokio = { version = "1.7", features = ["sync"] }
