[package]
name = "rocketbot_plugin_elementary"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
once_cell = { version = "1.21" }
rand = { version = "0.8" }
regex = { version = "1.11" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.9" }
tracing = { version = "0.1" }
unicode-normalization = { version = "0.1" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
