[package]
name = "rocketbot_plugin_fact"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1.4" }
log = { version = "0.4" }
percent-encoding = { version = "2.1" }
rand = { version = "0.8" }
regex = { version = "1.9" }
reqwest = { version = "0.11", features = ["rustls-tls"] }
rocketbot_interface = { path = "../rocketbot_interface" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
url = { version = "2.2" }
