[package]
name = "rocketbot_plugin_grammargen"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
log = { version = "0.4" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = { version = "0.2" }
pest = { version = "2.1" }
pest_derive = { version = "2.1" }
rand = { version = "0.8" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tokio = { version = "1.7", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
