[package]
name = "rocketbot_plugin_grammargen"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
either = { version = "1.15" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = { version = "0.2" }
once_cell = { version = "1.21" }
pest = { version = "2.8" }
pest_derive = { version = "2.8" }
rand = { version = "0.8" }
regex = { version = "1.11" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
